--- a/If-vote/app/build.gradle
+++ b/If-vote/app/build.gradle
@@ -31,11 +31,14 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.firebaseui:firebase-ui-database:1.2.0'
     compile 'com.firebase:firebase-client:2.2.4'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+//    compile 'com.google.android.gms:play-services:11.8.0'
+    testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
