--- a/If-vote/app/build.gradle
+++ b/If-vote/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.google.firebase:firebase-core:11.8.0'
@@ -36,9 +37,9 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:1.2.0'
     compile 'com.firebase:firebase-client:2.2.4'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
-//    compile 'com.google.android.gms:play-services:11.8.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'com.android.support:support-v4:26.+'
+    testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
